--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  
+
   <h1>Hello World</h1>
+  <div class="menu" id="menu-toggle">Menu</div>
+  <nav id="menu-nav">
+    <a href="#">item 1</a>
+    <a href="#">item 2</a>
+    <a href="#">item 3</a>
+  </nav>
 
   <script src="js/scripts.js"></script>
 </body>
